--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,7 +45,7 @@ jobs:
             echo "💥 Removing old project"
             rm -rf product-catalog-api
 
-            echo "📦 Cloning latest version"
+            echo " Cloning latest version"
             git clone https://github.com/YOUR_USERNAME/product-catalog-api.git
 
             cd product-catalog-api
